Enable actuator for metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 ### Prometheus config
-##management.endpoints.web.exposure.include=health,info,prometheus
-##management.prometheus.metrics.export.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+management.prometheus.metrics.export.enabled=true
