--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,8 @@
 spring.application.name=statementprocessor
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+### Prometheus config
+management.endpoints.web.exposure.include=health,info,prometheus
+management.prometheus.metrics.export.enabled=true
