--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,11 @@ spring.h2.console.settings.web-allow-others=false
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+#FILE UPLOAD
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+
 ### Prometheus config
 management.endpoints.web.exposure.include=health,info,prometheus
 management.prometheus.metrics.export.enabled=true
